src/styles/sass/components/_smart-input.scss
.smart-input {
    position: relative;

    &__icon {
        top: 50%;
        left: $smart-input-padding-sides;
        transform: translateY(-50%);
        transition: transform $smart-input-animation-duration
                $smart-input-animation-style,
            opacity $smart-input-animation-duration $smart-input-animation-style;
        fill: $color-light-grey;
        position: absolute;
        width: $smart-input-icon-size;
        height: $smart-input-icon-size;
    }

    &__label {
        position: absolute;
        color: white;
        left: 0;
        top: -70%;
        letter-spacing: 0.2rem;
        font-size: 1.2rem;
        transition: all 0.4s ease-in-out;
    }

    &__input:placeholder-shown ~ &__label {
        transform: translate(2rem, 4rem);
        opacity: 0;
        visibility: hidden;
    }

    &__input {
        background-color: $color-dark-medium;
        border-radius: $smart-input-border-radius;
        outline: none;
        border: none;
        height: $smart-input-height;
        min-width: $smart-input-width;
        padding: $smart-input-padding-top $smart-input-padding-sides;
        padding-left: 3 * $smart-input-padding-sides;
        font-size: 1.2rem;
        letter-spacing: 0.2rem;
        color: $color-white;
        transition: border-color $smart-input-animation-duration
                $smart-input-animation-style,
            padding-left $smart-input-animation-duration
                $smart-input-animation-style,
            border $smart-input-animation-duration $smart-input-animation-style;
        border: 1px solid rgba($color-white, 0);

        &--error {
            border-color: $color-rosy-pink;

            & ~ svg {
                fill: $color-rosy-pink !important;
            }
        }

        &--success {
            border-color: $color-green-light;

            & ~ svg {
                fill: $color-green-light;
            }
        }

        &--loading {
            & ~ svg {
                top: 1rem;
                animation: rotateRight 1.5s ease-in-out infinite running !important;
            }
        }

        &:focus + svg {
            transform: translateY(-4rem);
            opacity: 0;
        }

        &:focus {
            padding-left: 2rem;
            border: 1px solid $color-white;
        }

        @include input-placeholder($color-light-grey);
    }
}

